--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ languageCode = "en-us"
 
 googleAnalytics = "G-W6R2LTJLDG"
 
-enableEmoji: = true
+enableEmoji = true
 enableRobotsTXT = true
 
 [params]
